<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="35dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:alpha=".33"
    android:contentDescription="@string/activity_res_logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/pic"/>
  <ImageView
    android:id="@+id/teaCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="-20dp"
    android:layout_marginEnd="8dp"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/TEA"
    app:layout_constraintTop_toTopOf="@+id/TEA"
    app:srcCompat="@mipmap/ic_activity_complete"
    android:contentDescription="@string/activity_tea_completed"/>
  <ImageView
    android:id="@+id/cleanTrackerCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="33dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_clean_tracker_completed"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/CleanTracker"
    app:layout_constraintTop_toTopOf="@+id/CleanTracker"
    app:srcCompat="@mipmap/ic_activity_complete"/>
  <ImageView
    android:id="@+id/dailyWellnessCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_daily_wellness_completed"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/DailyWellness"
    app:layout_constraintTop_toTopOf="@+id/DailyWellness"
    app:srcCompat="@mipmap/ic_activity_complete"/>
  <ImageView
    android:id="@+id/eduCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_edu_completed"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Edu"
    app:layout_constraintTop_toTopOf="@+id/Edu"
    app:srcCompat="@mipmap/ic_activity_complete"/>
  <ImageView
    android:id="@+id/JournalCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_journal_completed"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Journal"
    app:layout_constraintTop_toTopOf="@+id/Journal"
    app:srcCompat="@mipmap/ic_activity_complete"/>
  <ImageView
    android:id="@+id/lessonCompletedPortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:contentDescription="@string/activity_lesson_completed"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Lesson"
    app:layout_constraintTop_toTopOf="@+id/Lesson"
    app:srcCompat="@mipmap/ic_activity_complete"/>
  <ImageView
    android:id="@+id/teaIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="-20dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_tea_incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/TEA"
    app:layout_constraintTop_toTopOf="@+id/TEA"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <ImageView
    android:id="@+id/cleanTrackerIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_clean_tracker_incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/CleanTracker"
    app:layout_constraintTop_toTopOf="@+id/CleanTracker"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <ImageView
    android:id="@+id/dailyWellnessIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_daily_wellness_incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/DailyWellness"
    app:layout_constraintTop_toTopOf="@+id/DailyWellness"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <ImageView
    android:id="@+id/eduIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_edu_incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Edu"
    app:layout_constraintTop_toTopOf="@+id/Edu"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <ImageView
    android:id="@+id/jouranlIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_journal_incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Journal"
    app:layout_constraintTop_toTopOf="@+id/Journal"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <ImageView
    android:id="@+id/lessonIncompletePortrait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/activity_lesson_Incomplete"
    android:visibility="invisible"
    app:layout_constraintEnd_toStartOf="@+id/Lesson"
    app:layout_constraintTop_toTopOf="@+id/Lesson"
    app:srcCompat="@mipmap/ic_activity_incomplete"/>
  <Button
    android:id="@+id/TEA"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="140dp"
    android:layout_marginStart="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_tea_button"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/Lesson"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="140dp"
    android:layout_marginEnd="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_lesson_button"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="@+id/TEA"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/Journal"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="65dp"
    android:layout_marginStart="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_journal_button"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/TEA"/>
  <Button
    android:id="@+id/Edu"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="65dp"
    android:layout_marginEnd="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_edu_button"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="@+id/Journal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Lesson"/>
  <Button
    android:id="@+id/DailyWellness"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="65dp"
    android:layout_marginStart="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_daily_wellness_button"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Journal"/>
  <Button
    android:id="@+id/CleanTracker"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="65dp"
    android:layout_marginEnd="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_clean_tracker_button"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Edu"/>
  <TextView
    android:id="@+id/textViewActivityPage"
    android:layout_width="230dp"
    android:layout_height="55dp"
    android:layout_marginTop="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/activity_title_activity_screen"
    android:textColor="#000000"
    android:textSize="45sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <android.support.design.widget.BottomNavigationView
    android:id="@+id/core_navigation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/res_green"
    app:elevation="0dp"
    app:itemBackground="@color/res_green"
    app:itemHorizontalTranslationEnabled="false"
    app:itemIconTint="@android:color/black"
    app:itemTextColor="@android:color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:menu="@menu/core_navigation"/>
</android.support.constraint.ConstraintLayout>