<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/activity_back_navigation_button"
    android:textStyle="bold"
    android:icon="@drawable/ic_return_black_24dp"
    android:title="@string/activity_back_navigation_button"/>
</menu>